# structprep

./: .gitignore  README.md  pyproject.toml
notebooks/: webdataset_brain_volume_viewer.ipynb
scripts/: make_wds.sh  run_structprep.sh
src/structprep/: __init__.py  __main__.py  bias.py  bids.py  intensity.py  make_wds.py  mask.py  orient.py  pipeline.py  qc.py  register.py  resample.py  slices.py  target.py  utils.py
