[project]
name = "structprep"
version = "0.1.0"
description = "Structural MRI preprocessing for model pretraining (RAS, affine coreg, liberal mask, N4, normalization, isotropic + shape)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "EMERGE", email = "devnull@example.com" }]
license = { text = "Proprietary" }
dependencies = [
  "nibabel>=5.2.1",
  "numpy>=1.26",
  "scipy>=1.10",
  "scikit-image>=0.22",
  "SimpleITK>=2.3",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "webdataset>=0.2.86",
  "ipykernel>=6.30.1",
  "ipywidgets>=8.1.7",
]

[project.scripts]
structprep = "structprep.__main__:main"
structprep-make-wds = "structprep.make_wds:main"

[tool.uv]
dev-dependencies = [
  "pytest>=7.4",
  "ruff>=0.5",
]
